--- a/progettoBS/style2.css
+++ b/progettoBS/style2.css
@@ -1,3 +1,8 @@
+body{
+    width: 90%;
+    margin: 0 auto;
+}
+
 .img-header{
     background-image: url("https://picsum.photos/1920/400");
     height: 400px;
@@ -6,9 +11,7 @@
     margin-bottom: 100px;
 }
 
-body{
-    margin: 0 auto;
-}
+
 
 .margine{
     margin-bottom: 80px;
@@ -17,4 +20,9 @@ body{
 .sfondo{
     background-color: black;
     padding: 50px;
+}
+
+.resizing {
+    width: 30%;
+    height: 600px;
 }
